--- a/themes/copper-hugo/layouts/_default/contact.html
+++ b/themes/copper-hugo/layouts/_default/contact.html
@@ -14,15 +14,15 @@
         <form method="POST" class="rounded shadow p-30" action="{{site.Params.contact_form_action}}">
           <div class="form-group mb-30">
             <label class="h5 font-weight-600 mb-2" for="fname">{{ i18n "name"}}</label>
-            <input class="form-control shadow-none" type="text" placeholder="Jack Barker" id="fname" required>
+            <input name = "name" class="form-control shadow-none" type="text" placeholder="Jack Barker" id="fname" required>
           </div>
           <div class="form-group mb-30">
             <label class="h5 font-weight-600 mb-2" for="email">{{i18n "mail"}}</label>
-            <input class="form-control shadow-none" type="email" placeholder="barker@Copper.io" id="email" required>
+            <input name = "email" class="form-control shadow-none" type="email" placeholder="barker@Copper.io" id="email" required>
           </div>
           <div class="form-group mb-30">
             <label class="h5 font-weight-600 mb-2" for="website">{{i18n "website"}}</label>
-            <input class="form-control shadow-none" type="url" placeholder="Website">
+            <input name="url" class="form-control shadow-none" type="url" placeholder="Website">
           </div>
           <div class="form-group mb-30">
             <label class="h5 font-weight-600 mb-2" for="message">{{ i18n "message"}}</label>
