--- a/themes/copper-hugo/layouts/index.html
+++ b/themes/copper-hugo/layouts/index.html
@@ -57,6 +57,7 @@
                     novalidate>
                     <div class="input-group d-block d-sm-flex">
                       <input
+                        name = "email"
                         type="email"
                         class="form-control bg-transparent"
                         placeholder="name@email.com"
