--- a/themes/copper-hugo/layouts/index.html
+++ b/themes/copper-hugo/layouts/index.html
@@ -103,6 +103,7 @@
                         class="form-control bg-transparent"
                         placeholder="name@email.com"
                         required />
+                        <input type="hidden" name="request" value="ebookrequest"/>
                       <div class="input-group-append">
                         <button
                           type="submit"
