--- a/themes/copper-hugo/layouts/index.html
+++ b/themes/copper-hugo/layouts/index.html
@@ -14,25 +14,14 @@
           <div class="d-block d-lg-flex no-gutters align-items-center h-100">
             <div class="col-12 col-xl-8 col-lg-8 order-lg-1">
               <div
-                class="banner-image has-video-popup has-shapes mb-4 mb-md-5 mb-lg-0">
+                class="banner-image has-video-popup has-shapes mb-4 ml-4 mb-md-5 mb-lg-0">
                 {{ if .video.enable }}
                   {{ with .video }}
-                    <button
-                      type="button"
-                      class="video-play-btn"
-                      data-bs-toggle="modal"
-                      data-src="{{ .video_embed_link }}"
-                      data-bs-target="#videoModal">
-                      <svg
-                        width="1.8em"
-                        height="1.8em"
-                        viewBox="0 0 16 16"
-                        fill="currentColor"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path
-                          d="M11.596 8.697l-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
-                      </svg>
-                    </button>
+                    <video class="video" loop controls preload="none" poster="/videos/main-ad-thumbnail.png" style="max-width:500px">
+                      <source src="{{ .video_embed_link }}.webm" type="video/webm" />
+                      <source src="{{ .video_embed_link }}.mp4" type="video/mp4" />
+                      Your browser doesn't support the HTML5 video tag.
+                    </video>
                   {{ end }}
                 {{ end }}
 
