--- a/themes/copper-hugo/layouts/partials/essential/footer.html
+++ b/themes/copper-hugo/layouts/partials/essential/footer.html
@@ -34,7 +34,7 @@
     <div class="row pt-60 pb-60">
       <div class="col-lg-4 col-md-6">
         <div class="pe-0 pe-lg-4">
-          <a class="mb-4 d-block" href="{{ site.BaseURL }}">
+          <a class="mb-4 d-block" href="{{ site.Home.RelPermalink }}">
             {{ partial "logo.html" }}
           </a>
           <p>{{ site.Params.footer_content | markdownify }}</p>
