dokuchat video background fix

--- a/themes/copper-hugo/layouts/index.html
+++ b/themes/copper-hugo/layouts/index.html
@@ -14,9 +14,12 @@
           <div class="d-block d-lg-flex no-gutters align-items-center h-100">
             <div class="col-12 col-xl-8 col-lg-8 order-lg-1">
               <div
-                class="banner-image has-video-popup has-shapes mb-4 mb-md-5 mb-lg-0">
+                class="banner-image has-video-popup has-shapes mb-4 mb-md-5 mb-lg-0"
+                
+                >
                 {{ if .video.enable }}
                   {{ with .video }}
+                  <img src="/videos/main-ad-thumbnail.png" alt="video thumbnail" class="img-fluid">
                     <button
                       type="button"
                       class="video-play-btn"
@@ -33,6 +36,7 @@
                           d="M11.596 8.697l-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
                       </svg>
                     </button>
+                  </image>
                   {{ end }}
                 {{ end }}
 
